@@ -41,6 +41,9 @@ Deprecations since 1.6
 
 Bug fixes since 1.6
 -------------------
+- LocalDate.toInterval() [2487417]
+  Now handles time zones which have no midnight at DST cutover
+
 - Time zone compiler now handles non-UTC better
 
 - Assorted Javadoc clarifications, including [2721880]
